# DeepLearning.ai

./: README.md
sales_pipeline/agentic_sales_pipeline/: README.md  pyproject.toml
sales_pipeline/agentic_sales_pipeline/src/agentic_sales_pipeline/: crew.py  main.py
sales_pipeline/agentic_sales_pipeline/src/agentic_sales_pipeline/config/: agents.yaml  tasks.yaml
sales_pipeline/email_writer/: README.md  pyproject.toml
sales_pipeline/email_writer/src/email_writer/: crew.py  main.py
sales_pipeline/email_writer/src/email_writer/config/: agents.yaml
sales_pipeline/flow/: sales_pipeline_flow.py
