[project]
name = "email_writer"
version = "0.1.0"
description = "email_writer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
email_writer = "email_writer.main:run"
run_crew = "email_writer.main:run"
train = "email_writer.main:train"
replay = "email_writer.main:replay"
test = "email_writer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
